Fix layout problems

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ kbd {
     right: 0;
     top: 0;
     bottom: 0;
+    min-width: 260px;
 }
 
 /* ================================= */
